--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=user-authentication-app
+#spring.data.mongodb.uri = mongodb+srv://test:test.mongodb.net/DatabaseName
+#spring.data.mongodb.uri = mongodb+srv://gowrish:pAvrzJ69hwrr2d7v@cluster0.iwi7zil.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri = mongodb+srv://gowrish:pAvrzJ69hwrr2d7v@cluster0.iwi7zil.mongodb.net/userauthentication?retryWrites=true&w=majority&appName=Cluster0
+jwtSecret= aHR0cHM6Ly93d3cueW91YmlsdW1hbWVyaWNhLmNvbS9sb2dpbi8=
+jwtExpirationMs= 86400000
