change mongo uri

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 #spring.data.mongodb.uri = mongodb+srv://test:test.mongodb.net/DatabaseName
-spring.data.mongodb.uri = mongodb+srv://test:test@cluster0.iwi7zil.mongodb.net/userauthentication?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri = mongodb+srv://test:test@mongodb.net/db?retryWrites=true&w=majority&appName=Cluster0
 jwtSecret= aHR0cHM6Ly93d3cueW91YmlsdW1hbWVyaWNhLmNvbS9sb2dpbi8=
 jwtExpirationMs= 86400000
